# sci-fi-concept-explorer

./: README.md  pyproject.toml
Data Files/: A Princess of Mars by Edgar Rice Burroughs.txt  Famous Modern Ghost Stories by Dorothy Scarborough et al..txt  Frankenstein; Or, The Modern Prometheus by Mary Wollstonecraft Shelley.txt  Little Brother by Cory Doctorow.txt  The Marching Morons by C. M. Kornbluth.txt  The Time Machine by H. G. Wells.txt  The War of the Worlds by H. G. Wells.txt  The island of Doctor Moreau by H. G. Wells.txt  Twenty Thousand Leagues under the Sea by Jules Verne.txt  We by Evgenii Ivanovich Zamiatin.txt
src/first_assigment/: application.py
tests/: test_1.py
